--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome to the PSG2-2021-G1-14 Petclinic
+welcome=Hola
 required=is required
 notFound=has not been found
 duplicate=is already in use
